manifest/objects/ALTF__Account_Solution_Competitor__c.object
<CustomObject>
    <description>Join Table between Altify Account Solutions and Account Competitors</description>
    <fields>
        <fullName>ALTF__Account_Solution__c</fullName>
        <description>Master/Detail to Account Solution</description>
        <label>Account Solution</label>
        <referenceTo>ALTF__Account_Solution__c</referenceTo>
        <relationshipLabel>Account Solution Competitors</relationshipLabel>
        <relationshipName>Account_Solution_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Comments__c</fullName>
        <label>Comments</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Competitor__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>AM Competitor</label>
        <referenceTo>ALTF__Competitor__c</referenceTo>
        <relationshipLabel>Altify Account Solution Competitors</relationshipLabel>
        <relationshipName>AM_Competitor</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Wallet_Perc__c</fullName>
        <formula>IF($Setup.ALTF__Account_Manager_Settings__c.ALTF__Use_Quantity_In_Market_Landscape__c,
IF (ISNULL(ALTF__Account_Solution__r.ALTF__Wallet_Quantity__c),
     NULL,
     IF (ALTF__Account_Solution__r.ALTF__Wallet_Quantity__c == 0, 
             0,  
             ALTF__Wallet_Quantity__c / ALTF__Account_Solution__r.ALTF__Wallet_Quantity__c
     )
)
,
IF (ISNULL(ALTF__Account_Solution__r.ALTF__Wallet_Size__c),
     NULL,
     IF (ALTF__Account_Solution__r.ALTF__Wallet_Size__c == 0, 
             0,  
             ALTF__Wallet_Value__c / ALTF__Account_Solution__r.ALTF__Wallet_Size__c
     )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Perc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Wallet_Quantity__c</fullName>
        <label>Wallet Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Wallet_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wallet Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Altify Account Solution Competitor</label>
    <nameField>
        <label>Fndtn_Account_Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Solution Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>